--- a/www/css/register.css
+++ b/www/css/register.css
@@ -193,3 +193,27 @@ html,body{margin:0; padding:0;}
 	select {-webkit-appearance: listbox; padding: 0px 5px !important}
 #regmsg_modal{margin-top: 30% !important}
 }
+
+.guideNotes{
+    clear: both;
+    padding-left:0;
+    font-size: 11px!important;
+    color: #85a095!important;
+display:inline-block;
+line-height:normal;	
+}
+.clearboth { clear:both; font-size:0; width:100%;}
+#register_holder .reg-text-rt { float:left; width:80%;}
+
+@media handheld, only screen and (max-width: 767px) {
+body #register_holder fieldset input, body #register_holder fieldset select { width:100%;}
+ }
+ 
+ @media only screen and (min-device-width: 768px) and (max-device-width: 1024px){
+ body #register_holder .reg-text-rt {float: left;
+    width: 50%;
+	}
+		body #register_holder > fieldset > span { width:auto;}
+body #register_holder fieldset input, body #register_holder fieldset select { width:100%;}
+  /* For landscape layouts only */
+}
